Fixed last CSS change
Footer was not visible on `index.html`, set `box-sizing: border-box`

--- a/kenneth/styles/styles.css
+++ b/kenneth/styles/styles.css
@@ -8,6 +8,7 @@ body {
 	margin: 0px;
 	font-family: "Poppins";
 	min-height: 100vh;
+	box-sizing: border-box;
 }
 
 nav {
